unpackaged/main/default/objects/Account/fields/Insurance_Based_Products_Experience__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Based_Products_Experience__c</fullName>
    <inlineHelpText>e.g., Annuities, Variable Life</inlineHelpText>
    <label>Insurance-Based Products Experience</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Experience</fullName>
            </value>
            <value>
                <fullName>Limited</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Experienced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>