unpackaged/main/default/objects/Account/fields/Interval_Fund_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Interval_Fund_Signed_Date__c</fullName>
    <label>Interval Fund Signed Date</label>
    <type>Date</type>
</CustomField>