unpackaged/main/default/objects/Account/fields/Investment_Objectives_FirstRank_Maestro__c.field-meta.xml
<CustomField>
    <fullName>Investment_Objectives_FirstRank_Maestro__c</fullName>
    <formula>CASE(
        UPPER(LEFT(Household__r.Investment_Objective_Ranked__c, 1)),
        &#39;B&#39;, &#39;L&#39;, 
        &#39;G&#39;, &#39;R&#39;,  
        &#39;I&#39;, &#39;I&#39;, 
        &#39;S&#39;, &#39;S&#39;,  
        &#39;P&#39;, &#39;P&#39;,
        &#39;W&#39;, &#39;W&#39;,  
        &#39;&#39;        
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investment Objectives</label>
    <type>Text</type>
</CustomField>