unpackaged/main/default/objects/Account/fields/isPortalUserActive__c.field-meta.xml
<CustomField>
    <fullName>isPortalUserActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set by the Enable/Disable Portal User flow. Indicates the community user for this person account is currently active. Machine-managed - do not edit by hand.</description>
    <inlineHelpText>Managed automatically by the Enable/Disable Portal User flow.</inlineHelpText>
    <label>Is Portal User Active</label>
    <type>Checkbox</type>
</CustomField>