unpackaged/main/default/objects/Account/fields/Issuer__c.field-meta.xml
<CustomField>
    <fullName>Issuer__c</fullName>
    <label>Issuer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>States_incl_US</valueSetName>
    </valueSet>
</CustomField>