unpackaged/main/default/objects/Account/fields/Last_Day_of_This_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Last_Day_of_This_Quarter__c</fullName>
    <description>Created by CCC(KM) for retirement opportunity creation prefills and used in the custom button to create new retirement plan</description>
    <formula>TEXT(DATE(YEAR(TODAY()), CEILING(MONTH(TODAY()) / 3) * 3 + 1, 1) - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Day of This Quarter</label>
    <type>Text</type>
</CustomField>