unpackaged/main/default/objects/Account/fields/Liquid_Assets_Code_Maestro__c.field-meta.xml
<CustomField>
    <fullName>Liquid_Assets_Code_Maestro__c</fullName>
    <formula>1</formula>
    <label>Liquid Assets Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>