unpackaged/main/default/objects/Account/fields/Maestro_ID__c.field-meta.xml
<CustomField>
    <fullName>Maestro_ID__c</fullName>
    <label>Maestro ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>