unpackaged/main/default/objects/Account/fields/Mailing_Different_than_Permanent__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Different_than_Permanent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mailing Different than Permanent</label>
    <type>Checkbox</type>
</CustomField>