unpackaged/main/default/objects/Account/fields/Market_Value_of_Business_Interest__c.field-meta.xml
<CustomField>
    <fullName>Market_Value_of_Business_Interest__c</fullName>
    <label>Market Value of Business Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>