unpackaged/main/default/objects/Account/fields/Market_Value_of_Non_RE_Alt_Investments__c.field-meta.xml
<CustomField>
    <fullName>Market_Value_of_Non_RE_Alt_Investments__c</fullName>
    <label>Market Value of Non-RE Alt Investments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>