unpackaged/main/default/objects/Account/fields/Market_Value_of_Primary_Residence__c.field-meta.xml
<CustomField>
    <fullName>Market_Value_of_Primary_Residence__c</fullName>
    <label>Market Value of Primary Residence</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>