unpackaged/main/default/objects/Account/fields/Member_Record_Number__c.field-meta.xml
<CustomField>
    <fullName>Member_Record_Number__c</fullName>
    <label>Member Record Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>