unpackaged/main/default/objects/Account/fields/Member_Type__c.field-meta.xml
<CustomField>
    <fullName>Member_Type__c</fullName>
    <label>Member Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broker Dealer</fullName>
            </value>
            <value>
                <fullName>DAS NexS Wizard</fullName>
            </value>
            <value>
                <fullName>DAS Non-Producing</fullName>
            </value>
            <value>
                <fullName>DAS RIA</fullName>
            </value>
            <value>
                <fullName>DFPG NexS Wizard</fullName>
            </value>
            <value>
                <fullName>DFPG Non-Producing</fullName>
            </value>
            <value>
                <fullName>Dual NexS Wizard</fullName>
            </value>
            <value>
                <fullName>Dual Non-Producing</fullName>
            </value>
            <value>
                <fullName>Dual Registered</fullName>
            </value>
            <value>
                <fullName>DWM Dual Registered</fullName>
            </value>
            <value>
                <fullName>DWM RIA</fullName>
            </value>
            <value>
                <fullName>No Membership Fee</fullName>
            </value>
            <value>
                <fullName>Non-Producing Staff</fullName>
            </value>
            <value>
                <fullName>Registered Producer (Dual)</fullName>
            </value>
            <value>
                <fullName>Registered Producer (RIA)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>