unpackaged/main/default/objects/Account/fields/Mortgage_Payable_on_Primary_Residence__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Payable_on_Primary_Residence__c</fullName>
    <label>Mortgage Payable on Primary Residence</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>