unpackaged/main/default/objects/Account/fields/Mutual_Fund_Exch_TF_Investment_Years_Exp__c.field-meta.xml
<CustomField>
    <fullName>Mutual_Fund_Exch_TF_Investment_Years_Exp__c</fullName>
    <label>Mutual Fund/Exch TF Investment Years Exp</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>