unpackaged/main/default/objects/Account/fields/Name_of_Company__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Company__c</fullName>
    <label>Name of Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>