unpackaged/main/default/objects/Account/fields/Name_of_Country__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Country__c</fullName>
    <description>Broker-Dealer Affiliation - Name of Country for Senior Military, Governmental, or Political.</description>
    <label>Name of Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FinServ__Countries</valueSetName>
    </valueSet>
</CustomField>