unpackaged/main/default/objects/Account/fields/New_Money_Bonus_Advisor__c.field-meta.xml
<CustomField>
    <fullName>New_Money_Bonus_Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Money Bonus Advisor</label>
    <referenceTo>Financial_Advisor_Team__c</referenceTo>
    <relationshipLabel>Accounts (New Money Bonus Advisor)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>