unpackaged/main/default/objects/Account/fields/NonDiscretionary_for_DocuSign__c.field-meta.xml
<CustomField>
    <fullName>NonDiscretionary_for_DocuSign__c</fullName>
    <formula>ISPICKVAL( Authority__c , &#39;Non-Discretionary basis&#39;)</formula>
    <label>NonDiscretionary for DocuSign</label>
    <type>Checkbox</type>
</CustomField>