unpackaged/main/default/objects/Account/fields/Officer__c.field-meta.xml
<CustomField>
    <fullName>Officer__c</fullName>
    <description>Broker Dealer Affiliation - Officer, Director, over 10% Shareholder of any Public Traded Company</description>
    <label>Officer/Director/10% Shareholder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>