unpackaged/main/default/objects/Account/fields/Onbase_Migration_ID__c.field-meta.xml
<CustomField>
    <fullName>Onbase_Migration_ID__c</fullName>
    <externalId>true</externalId>
    <label>Onbase Migration ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>