unpackaged/main/default/objects/Account/fields/Other_Email_1__c.field-meta.xml
<CustomField>
    <fullName>Other_Email_1__c</fullName>
    <description>Used by Finance/Billing previously for license reconciliation. Historical email data point that they think would be useful.</description>
    <label>Other Email 1</label>
    <type>Email</type>
</CustomField>