unpackaged/main/default/objects/Account/fields/Other_Experience__c.field-meta.xml
<CustomField>
    <fullName>Other_Experience__c</fullName>
    <label>Other Experience</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Limited</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Experienced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>