unpackaged/main/default/objects/Account/fields/Other_Experience_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Experience_Type__c</fullName>
    <label>Other Experience Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>