unpackaged/main/default/objects/Account/fields/Other_Illiquid_Assets_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Illiquid_Assets_Description__c</fullName>
    <label>Other Illiquid Assets Description</label>
    <type>TextArea</type>
</CustomField>