unpackaged/main/default/objects/Account/fields/Other_Investment_Years_Experience__c.field-meta.xml
<CustomField>
    <fullName>Other_Investment_Years_Experience__c</fullName>
    <label>Other Investment Years Experience</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>