unpackaged/main/default/objects/Account/fields/Other_Long_Term_Liabilities__c.field-meta.xml
<CustomField>
    <fullName>Other_Long_Term_Liabilities__c</fullName>
    <label>Other Long-Term Liabilities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>