unpackaged/main/default/objects/Account/fields/Party_Type__c.field-meta.xml
<CustomField>
    <fullName>Party_Type__c</fullName>
    <label>Party Type</label>
    <length>3</length>
    <type>Text</type>
</CustomField>