unpackaged/main/default/objects/Account/fields/PersonWorkPhone__c.field-meta.xml
<CustomField>
    <fullName>PersonWorkPhone__c</fullName>
    <label>Work Phone</label>
    <type>Phone</type>
</CustomField>