unpackaged/main/default/objects/Account/fields/PerspectiveMigrationId__c.field-meta.xml
<CustomField>
    <fullName>PerspectiveMigrationId__c</fullName>
    <externalId>true</externalId>
    <label>PerspectiveMigrationId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>