unpackaged/main/default/objects/Account/fields/Photo_ID_Type__c.field-meta.xml
<CustomField>
    <fullName>Photo_ID_Type__c</fullName>
    <label>Photo ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Driver License</fullName>
            </value>
            <value>
                <fullName>State ID</fullName>
            </value>
            <value>
                <fullName>Military ID</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>