unpackaged/main/default/objects/Account/fields/Plan_ID__c.field-meta.xml
<CustomField>
    <fullName>Plan_ID__c</fullName>
    <label>Plan ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>