unpackaged/main/default/objects/Account/fields/Plan_Origin__c.field-meta.xml
<CustomField>
    <fullName>Plan_Origin__c</fullName>
    <label>Plan Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Start-Up</fullName>
            </value>
            <value>
                <fullName>Conversion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>