unpackaged/main/default/objects/Account/fields/Plan_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Plan_Sponsor__c</fullName>
    <label>Plan Sponsor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>