unpackaged/main/default/objects/Account/fields/Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Plan_Type__c</fullName>
    <label>Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>