unpackaged/main/default/objects/Account/fields/Plan_Type_Other_Description__c.field-meta.xml
<CustomField>
    <fullName>Plan_Type_Other_Description__c</fullName>
    <label>Plan Type Other Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>