unpackaged/main/default/objects/Account/fields/Potential_Service__c.field-meta.xml
<CustomField>
    <fullName>Potential_Service__c</fullName>
    <description>Service the prospect is a candidate for. Mirrors Lead.Potential_Service__c and Opportunity.Potential_Service__c via the Potential Services global value set.</description>
    <label>Potential Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Potential_Services</valueSetName>
    </valueSet>
</CustomField>