unpackaged/main/default/objects/Account/fields/Primary_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Advisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>