unpackaged/main/default/objects/Account/fields/Private_Credit_Years_Experience__c.field-meta.xml
<CustomField>
    <fullName>Private_Credit_Years_Experience__c</fullName>
    <label>Private Credit Years Experience</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>