unpackaged/main/default/objects/Account/fields/Private_Equity_Investment_Years_Exp__c.field-meta.xml
<CustomField>
    <fullName>Private_Equity_Investment_Years_Exp__c</fullName>
    <label>Private Equity Investment Years Exp</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>