unpackaged/main/default/objects/Account/fields/Real_Assets_Experience__c.field-meta.xml
<CustomField>
    <fullName>Real_Assets_Experience__c</fullName>
    <inlineHelpText>e.g., Direct Real Estate, Commodities, Gold Bullion</inlineHelpText>
    <label>Real Assets Experience</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Experience</fullName>
            </value>
            <value>
                <fullName>Limited</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Experienced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>