unpackaged/main/default/objects/Account/fields/Recurring_Trading_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Trading_Frequency__c</fullName>
    <label>Recurring Trading Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annual</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>