unpackaged/main/default/objects/Account/fields/Recurring_Trading_Notes__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Trading_Notes__c</fullName>
    <label>Recurring Trading Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>