unpackaged/main/default/objects/Account/fields/Referring_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Referring_Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the advisor that originally brought in the client</description>
    <inlineHelpText>This is the advisor that originally brought in the client</inlineHelpText>
    <label>Referring Advisor</label>
    <referenceTo>Financial_Advisor_Team__c</referenceTo>
    <relationshipLabel>Accounts (Rainmaker Advisor Lookup)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>