unpackaged/main/default/objects/Account/fields/Required_DocuSign_Documents__c.field-meta.xml
<CustomField>
    <fullName>Required_DocuSign_Documents__c</fullName>
    <label>Required DocuSign Documents</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>