unpackaged/main/default/objects/Account/fields/Review_Meeting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Review_Meeting_Notes__c</fullName>
    <label>Review Meeting Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>