unpackaged/main/default/objects/Account/fields/Risk_Tolerance__c.field-meta.xml
<CustomField>
    <fullName>Risk_Tolerance__c</fullName>
    <label>Risk Tolerance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conservative</fullName>
            </value>
            <value>
                <fullName>Moderately Conservative</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Moderately Aggressive</fullName>
            </value>
            <value>
                <fullName>Aggressive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>