unpackaged/main/default/objects/Account/fields/RMD_Applies_Inherited__c.field-meta.xml
<CustomField>
    <fullName>RMD_Applies_Inherited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RMD Applies Inherited</label>
    <type>Checkbox</type>
</CustomField>