unpackaged/main/default/objects/Account/fields/Savings_Money_Market_CDs__c.field-meta.xml
<CustomField>
    <fullName>Savings_Money_Market_CDs__c</fullName>
    <label>Savings/Money Market/CDs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>