unpackaged/main/default/objects/Account/fields/Senior_Military_Governmental_Political__c.field-meta.xml
<CustomField>
    <fullName>Senior_Military_Governmental_Political__c</fullName>
    <description>Broker Dealer Affiliation - A senior military, governmental, or political official in a publicly-owned company?</description>
    <label>Senior Military/Governmental/Political?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>