unpackaged/main/default/objects/Account/fields/Signer_1__c.field-meta.xml
<CustomField>
    <fullName>Signer_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Signer 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Signer 1)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>