unpackaged/main/default/objects/Account/fields/Stocks_Bonds_MF_through_Retirement__c.field-meta.xml
<CustomField>
    <fullName>Stocks_Bonds_MF_through_Retirement__c</fullName>
    <label>Stocks/Bonds/MF through Retirement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>