unpackaged/main/default/objects/Account/fields/Structured_Note_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Structured_Note_Signed_Date__c</fullName>
    <label>Structured Note Signed Date</label>
    <type>Date</type>
</CustomField>