unpackaged/main/default/objects/Account/fields/Tax_ID_AML__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID_AML__c</fullName>
    <formula>IF(
    ISBLANK(Tax_ID__c ),
    SUBSTITUTE( Household__r.Tax_ID__c , &quot;-&quot;, &quot;&quot;),
    SUBSTITUTE(Tax_ID__c, &quot;-&quot;, &quot;&quot;)


)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax ID</label>
    <type>Text</type>
</CustomField>