unpackaged/main/default/objects/Account/fields/Tax_ID_Type__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID_Type__c</fullName>
    <label>Tax ID Type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>