unpackaged/main/default/objects/Account/fields/Tax_ID_Type_AML__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID_Type_AML__c</fullName>
    <formula>CASE(TIN_or_SSN__c, 
     &quot;TIN&quot;, &quot;T&quot;, 
     &quot;SSN&quot;, &quot;S&quot;, 
     &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax ID Type</label>
    <type>Text</type>
</CustomField>