unpackaged/main/default/objects/Account/fields/This_Year__c.field-meta.xml
<CustomField>
    <fullName>This_Year__c</fullName>
    <description>Created by CCC(KM) for retirement opportunity creation prefills and used in the custom button to create new retirement plan</description>
    <formula>TEXT(YEAR(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>This Year</label>
    <type>Text</type>
</CustomField>