unpackaged/main/default/objects/Account/fields/Time_Horizon_Further_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Time_Horizon_Further_Explanation__c</fullName>
    <label>Time Horizon - Further Explanation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>