unpackaged/main/default/objects/Account/fields/TIN_or_SSN__c.field-meta.xml
<CustomField>
    <fullName>TIN_or_SSN__c</fullName>
    <label>TIN or SSN</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TIN</fullName>
            </value>
            <value>
                <fullName>SSN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>