unpackaged/main/default/objects/Account/fields/Total_Liabilities__c.field-meta.xml
<CustomField>
    <fullName>Total_Liabilities__c</fullName>
    <label>Total Liabilities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>