unpackaged/main/default/objects/Account/fields/Total_Liquid_Assets__c.field-meta.xml
<CustomField>
    <fullName>Total_Liquid_Assets__c</fullName>
    <label>Total Liquid Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>