unpackaged/main/default/objects/Account/fields/Trust_Name__c.field-meta.xml
<CustomField>
    <fullName>Trust_Name__c</fullName>
    <label>Trust Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>