unpackaged/main/default/objects/Account/fields/Trust_Tax_Classification__c.field-meta.xml
<CustomField>
    <fullName>Trust_Tax_Classification__c</fullName>
    <label>Trust Tax Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grantor</fullName>
            </value>
            <value>
                <fullName>Simple</fullName>
            </value>
            <value>
                <fullName>Complex</fullName>
            </value>
            <value>
                <fullName>Unknown at this time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>