unpackaged/main/default/objects/Account/fields/Trust_Type__c.field-meta.xml
<CustomField>
    <fullName>Trust_Type__c</fullName>
    <label>Trust Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Joint (Community Property, JTWROS, Tenants in Common, Tenants in the Entirety)</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>UTMA/UGMA</fullName>
            </value>
            <value>
                <fullName>Corporation (C or S)</fullName>
            </value>
            <value>
                <fullName>Estate</fullName>
            </value>
            <value>
                <fullName>Other Non-Trust Fiduciary (Conservatorship or Guardianship)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>