unpackaged/main/default/objects/Account/fields/VMS_Addendum_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>VMS_Addendum_Signed_Date__c</fullName>
    <label>VMS Addendum Signed Date</label>
    <type>Date</type>
</CustomField>